# nymph

./: .gitignore  Cargo.toml  nymph-bot.toml  nymph.toml
migrations/: 20250923050939_init_database.sql  20250924040856_create_set_name.sql  20250925014706_create_card_upgrades.sql  20250926213313_add_visibility_field.sql  20250926213915_add_card_ownership_data.sql  20250926215423_add_owned_field_to_ownership.sql  20250927002248_create_primary_key_for_ownership.sql  20251016044552_init_database.sql  20251017231300_use_visibility_enum_names.sql
nymph-bot/: Cargo.toml
nymph-bot/src/: commands.rs  config.rs  dispatch.rs  lib.rs  main.rs  user.rs
nymph-bot/src/card/: editor.rs  inventory.rs  mod.rs  show.rs
nymph-bot/src/http/: client.rs  mod.rs
nymph-bot/src/http/request/: user.rs
nymph-bot/src/http/request/card/: inventory.rs  mod.rs
nymph-model/: Cargo.toml
nymph-model/src/: card.rs  error.rs  lib.rs  user.rs
nymph-model/src/request/: mod.rs
nymph-model/src/request/card/: inventory.rs  mod.rs
nymph-model/src/request/user/: mod.rs
nymph-model/src/response/: mod.rs  user.rs
nymph-server/: Cargo.toml
nymph-server/src/: app.rs  cli.rs  config.rs  lib.rs  main.rs
nymph-server/src/auth/: api_key.rs  mod.rs  token.rs
nymph-server/src/request/: mod.rs  validate.rs
nymph-server/src/routes/: mod.rs
nymph-server/src/routes/card/: inventory.rs  mod.rs
nymph-server/src/routes/user/: mod.rs
nymph-server/src/schema/: mod.rs
src/: accent.rs  card.rs  commands.rs  config.rs  dispatch.rs  lib.rs  main.rs  user.rs
src/models/: card.rs  mod.rs  user.rs
