[package]
name = "nymph"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
dotenv = "0.15"
figment = { version = "0.10.19", features = ["env", "toml"] }
rand = "0.9"
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
textdistance = "1.1.1"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = "0.16"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
twilight-util = { version = "0.16", features = ["builder"] }
