[package]
name = "nymph"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["deref"] }
dotenv = "0.15"
figment = { version = "0.10.19", features = ["env", "toml"] }
rand = "0.9"
serde = { version = "1.0.226", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
textdistance = "1.1.1"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.twilight-cache-inmemory]
version = "0.16"
git = "https://github.com/twilight-rs/twilight.git"

[dependencies.twilight-gateway]
version = "0.16"
git = "https://github.com/twilight-rs/twilight.git"

[dependencies.twilight-http]
version = "0.16"
git = "https://github.com/twilight-rs/twilight.git"

[dependencies.twilight-model]
version = "0.16"
git = "https://github.com/twilight-rs/twilight.git"

[dependencies.twilight-util]
version = "0.16"
git = "https://github.com/twilight-rs/twilight.git"
features = ["builder"]
