[workspace]
resolver = "3"
members = [
  "nymph-bot",
  "nymph-model",
  "nymph-server",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
nymph-model = { path = "./nymph-model" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "2"
serde = { version = "1", features = ["derive"] }
sqlx = "0.8"
dotenv = "0.15"
figment = "0.10"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
base16 = "0.2"
rand = "0.9"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
axum = "0.8"
axum-server = "0.7"
tower = "0.5"
tower-http = "0.6"
http = "1"
futures-util = "0.3"
textdistance = "1"
reqwest = "0.12"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
