[package]
name = "nymph-model"
version = "0.1.0"
authors = ["Dante Helmore <frostu8@protonmail.com>"]
edition.workspace = true

description = "Nymph data representations"

[dependencies]
chrono = { workspace = true }
derive_more = { workspace = true, features = ["display", "error", "from", "deref", "deref_mut", "into"] }
serde = { workspace = true }
